Fix css overflow on full height  - add surge prehooks

--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -1,10 +1,4 @@
 .map-container{
   width: 100%;
-  height: 100vh;
-  // position: absolute;
-  // width: 60%;   
-  // height: calc(100% - 51px);
-  // background: darkorchid;
-  // top: 51px;
-  // left: 40%;
+  height: calc( 100vh - 52px);
 }
